Fix forced image alignment on all screen sizes

--- a/design/scss/base/img.scss
+++ b/design/scss/base/img.scss
@@ -1,5 +1,8 @@
 img {
-  display: block;
-  margin: auto;
   max-width: 100%;
+
+  @include breakpoint(sm-dn) {
+    display: block;
+    margin: auto;
+  }
 }
